--- a/study/striver-A2Z/13-dp.ipynb
+++ b/study/striver-A2Z/13-dp.ipynb
@@ -6208,6 +6208,7 @@
      "iopub.status.idle": "2024-05-18T13:44:03.344602Z",
      "shell.execute_reply": "2024-05-18T13:44:03.344083Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.023242,
      "end_time": "2024-05-18T13:44:03.345702",
@@ -6219,7 +6220,7 @@
    },
    "outputs": [],
    "source": [
-    "def matrixMultiplication(N: int, arr: list[int]) -> float:\n",
+    "def matrixMultiplicationMemo(N: int, arr: list[int]) -> float:\n",
     "    @functools.cache\n",
     "    def backtrack(i: int, j: int) -> float:\n",
     "        if i == j:\n",
@@ -6233,8 +6234,101 @@
     "    return backtrack(1, N - 1)\n",
     "\n",
     "# Testing the solution\n",
-    "assert matrixMultiplication(5, [40, 20, 30, 10, 30]) == 26000\n",
-    "assert matrixMultiplication(4, [10, 30, 5, 60]) == 4500"
+    "assert matrixMultiplicationMemo(5, [40, 20, 30, 10, 30]) == 26000\n",
+    "assert matrixMultiplicationMemo(4, [10, 30, 5, 60]) == 4500"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3cb9f72",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def matrixMultiplicationTab(N: int, arr: list[int]) -> float:\n",
+    "    # Time: O(N ** 3), Space: O(N ** 2)\n",
+    "    dp: list[list[float]] = [[math.inf if i != j else 0 for j in range(N)] for i in range(N)]\n",
+    "    for i in range(N - 1, 0, -1):\n",
+    "        for j in range(i + 1, N): # J should be to the right of i, as soon as i == j we return 0 (captured already in DP)\n",
+    "            for k in range(i, j):\n",
+    "                dp[i][j] = min(dp[i][j], (arr[i - 1] * arr[k] * arr[j]) + dp[i][k] + dp[k + 1][j])\n",
+    "\n",
+    "    return dp[1][N - 1]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert matrixMultiplicationTab(5, [40, 20, 30, 10, 30]) == 26000\n",
+    "assert matrixMultiplicationTab(4, [10, 30, 5, 60]) == 4500"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4626b2b",
+   "metadata": {},
+   "source": [
+    "Minimum cost to cut a stick: Partition DP\n",
+    "Video Link: https://youtu.be/xwomavsC86c?si=mMNfxJYMPVbhildn\n",
+    "Problem Link: https://leetcode.com/problems/minimum-cost-to-cut-a-stick/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39a420ce",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/minimum-cost-to-cut-a-stick/submissions/1262208436\n",
+    "def minCostToCutStickMemo(N: int, cuts: list[int]) -> int:\n",
+    "    @functools.cache\n",
+    "    def backtrack(i: int, j: int) -> int:\n",
+    "        if i + 1 == j:\n",
+    "            return 0\n",
+    "        else:\n",
+    "            left = cuts[i] if i >= 0 else 0\n",
+    "            right = cuts[j] if j < n_cuts else N\n",
+    "            cost = right - left\n",
+    "            min_: float = math.inf\n",
+    "            for k in range(i + 1, j):\n",
+    "                min_ = min(min_, backtrack(i, k) + backtrack(k, j))\n",
+    "            return int(min_ + cost)\n",
+    "\n",
+    "    cuts.sort()\n",
+    "    n_cuts = len(cuts)\n",
+    "    return backtrack(-1, n_cuts)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert minCostToCutStickMemo(9, [5,6,1,4,2]) == 22\n",
+    "assert minCostToCutStickMemo(7, [1,3,4,5]) == 16"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d96a27e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/minimum-cost-to-cut-a-stick/submissions/1262240842\n",
+    "def minCostToCutStickTab(N: int, cuts: list[int]) -> int:\n",
+    "    cuts.sort()\n",
+    "    n_cuts = len(cuts)\n",
+    "    dp: list[list[float]] = [[math.inf if i + 1 != j else 0 for j in range(-1, n_cuts + 1)] for i in range(-1, n_cuts + 1)]\n",
+    "    for i in range(n_cuts - 1, -2, -1):\n",
+    "        for j in range(i + 2, n_cuts + 1):\n",
+    "            left = cuts[i] if i >= 0 else 0\n",
+    "            right = cuts[j] if j < n_cuts else N\n",
+    "            for k in range(i + 1, j):\n",
+    "                dp[i + 1][j + 1] = min(dp[i + 1][j + 1], right - left + dp[i + 1][k + 1] + dp[k + 1][j + 1])\n",
+    "\n",
+    "    return int(dp[0][n_cuts + 1])\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert minCostToCutStickTab(9, [5,6,1,4,2]) == 22\n",
+    "assert minCostToCutStickTab(7, [1,3,4,5]) == 16"
    ]
   }
  ],
