--- a/study/striver-A2Z/13-dp.ipynb
+++ b/study/striver-A2Z/13-dp.ipynb
@@ -6353,6 +6353,7 @@
      "iopub.status.idle": "2024-05-19T14:23:45.987133Z",
      "shell.execute_reply": "2024-05-19T14:23:45.986708Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.024911,
      "end_time": "2024-05-19T14:23:45.988155",
@@ -6381,6 +6382,72 @@
     "# Testing the solution\n",
     "assert minCostToCutStickTab(9, [5,6,1,4,2]) == 22\n",
     "assert minCostToCutStickTab(7, [1,3,4,5]) == 16"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d0e0f7d",
+   "metadata": {},
+   "source": [
+    "Video Link: https://youtu.be/Yz4LlDSlkns?si=EmIPfeTOs548wE0c\n",
+    "Burst Balloons"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a6fad8b",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/burst-balloons/submissions/1262677527\n",
+    "def maxCoinsMemo(nums: list[int]) -> int:\n",
+    "    @functools.cache\n",
+    "    def backtrack(i: int, j: int) -> int:\n",
+    "        if j - i <= 1:\n",
+    "            return 0\n",
+    "        else:\n",
+    "            max_: int = 0\n",
+    "            for k in range(i + 1, j):\n",
+    "                max_ = max(max_, (nums[i] * nums[j] * nums[k]) + backtrack(i, k) + backtrack(k, j))\n",
+    "            return max_\n",
+    "\n",
+    "    N = len(nums) + 2\n",
+    "    nums = [1] + nums + [1]\n",
+    "    return backtrack(0, N - 1)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert maxCoinsMemo([3,1,5,8]) == 167\n",
+    "assert maxCoinsMemo([1,5]) == 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29a841ea",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/burst-balloons/submissions/1262679628\n",
+    "def maxCoinsTab(nums: list[int]) -> int:\n",
+    "    N = len(nums) + 2\n",
+    "    nums = [1] + nums + [1]\n",
+    "    dp: list[list[int]] = [[0 for j in range(N)] for i in range(N)]\n",
+    "\n",
+    "    for i in range(N - 1, -1, -1):\n",
+    "        for j in range(i + 2, N):\n",
+    "            for k in range(i + 1, j):\n",
+    "                dp[i][j] = max(dp[i][j], (nums[i] * nums[j] * nums[k]) + dp[i][k] + dp[k][j])\n",
+    "\n",
+    "    return dp[0][N - 1]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert maxCoinsTab([3,1,5,8]) == 167\n",
+    "assert maxCoinsTab([1,5]) == 10"
    ]
   }
  ],
