Pushing through sleep

--- a/practice/003.ipynb
+++ b/practice/003.ipynb
@@ -445,7 +445,7 @@
      "iopub.status.idle": "2024-05-19T04:04:46.893676Z",
      "shell.execute_reply": "2024-05-19T04:04:46.893152Z"
     },
-    "lines_to_next_cell": 3,
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.060907,
      "end_time": "2024-05-19T04:04:46.894691",
@@ -497,6 +497,39 @@
     "for i in range(100):\n",
     "    temp = list(np.random.randint(10, 100, 50))\n",
     "    assert sumDigitDifferencesBrute(temp) == sumDigitDifferences(temp)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d69bfc3",
+   "metadata": {},
+   "source": [
+    "Sum of XOR totals\n",
+    "Easy LC: https://leetcode.com/problems/sum-of-all-subset-xor-totals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e8f2bd0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/sum-of-all-subset-xor-totals/submissions/1263288868\n",
+    "def subsetXORSumMemo(nums: list[int]) -> int:\n",
+    "    @functools.cache\n",
+    "    def backtrack(i: int, curr: int) -> int:\n",
+    "        if i == N:\n",
+    "            return curr\n",
+    "        else:\n",
+    "            return backtrack(i + 1, curr ^ nums[i]) + backtrack(i + 1, curr)\n",
+    "\n",
+    "    N = len(nums)\n",
+    "    return backtrack(0, 0)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert subsetXORSumMemo([1,3]) == 6\n",
+    "assert subsetXORSumMemo([5,1,6]) == 28"
    ]
   }
  ],
