--- a/study/striver-A2Z/13-dp.ipynb
+++ b/study/striver-A2Z/13-dp.ipynb
@@ -6639,6 +6639,7 @@
      "iopub.status.idle": "2024-05-21T16:48:45.689361Z",
      "shell.execute_reply": "2024-05-21T16:48:45.688926Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.030847,
      "end_time": "2024-05-21T16:48:45.690520",
@@ -6665,10 +6666,12 @@
     "def minCutBrute(s: str) -> int:\n",
     "    @functools.cache\n",
     "    def isPalindrome(i: int, j: int) -> bool:\n",
-    "        while i < j and s[i] == s[j]:\n",
-    "            i, j = i + 1, j - 1\n",
-    "\n",
-    "        return i >= j\n",
+    "        if i >= j:\n",
+    "            return True\n",
+    "        elif s[i] == s[j]:\n",
+    "            return isPalindrome(i + 1, j - 1)\n",
+    "        else:\n",
+    "            return False\n",
     "\n",
     "    @functools.cache\n",
     "    def backtrack(i: int, j: int) -> int:\n",
@@ -6684,7 +6687,76 @@
     "    return backtrack(0, N - 1)\n",
     "\n",
     "# Testing the solution\n",
-    "minCutBrute(\"racecarmalayalammadam\")"
+    "assert minCutBrute(\"racecarmalayalammadam\") == 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8bb639d1",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/palindrome-partitioning-ii/submissions/1265073831/\n",
+    "def minCutMemo(s: str) -> int:\n",
+    "    @functools.cache\n",
+    "    def isPalindrome(i: int, j: int) -> bool:\n",
+    "        if i >= j:\n",
+    "            return True\n",
+    "        elif s[i] == s[j]:\n",
+    "            return isPalindrome(i + 1, j - 1)\n",
+    "        else:\n",
+    "            return False\n",
+    "\n",
+    "    @functools.cache\n",
+    "    def backtrack(i: int):\n",
+    "        if i == N:\n",
+    "            return 0\n",
+    "        else:\n",
+    "            min_: int = N\n",
+    "            for k in range(i, N):\n",
+    "                if isPalindrome(i, k):\n",
+    "                    min_ = min(min_, 1 + backtrack(k + 1))\n",
+    "            return min_\n",
+    "\n",
+    "    N = len(s)\n",
+    "    return backtrack(0) - 1\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert minCutMemo(\"racecarmalayalammadam\") == 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ef6014f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/palindrome-partitioning-ii/submissions/1265079990/\n",
+    "def minCut(s: str) -> int:\n",
+    "    @functools.cache\n",
+    "    def isPalindrome(i: int, j: int) -> bool:\n",
+    "        if i >= j:\n",
+    "            return True\n",
+    "        elif s[i] == s[j]:\n",
+    "            return isPalindrome(i + 1, j - 1)\n",
+    "        else:\n",
+    "            return False\n",
+    "\n",
+    "    N = len(s)\n",
+    "    dp: list[int] = [N if i < N else 0 for i in range(N + 1)]\n",
+    "    for i in range(N - 1, -1, -1):\n",
+    "        for k in range(i, N):\n",
+    "            if isPalindrome(i, k):\n",
+    "                dp[i] = min(dp[i], 1 + dp[k + 1])\n",
+    "\n",
+    "    return dp[0] - 1\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert minCut(\"racecarmalayalammadam\") == 2"
    ]
   }
  ],
