--- a/practice/003.ipynb
+++ b/practice/003.ipynb
@@ -528,6 +528,7 @@
      "iopub.status.idle": "2024-05-20T17:28:33.671410Z",
      "shell.execute_reply": "2024-05-20T17:28:33.670881Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.008207,
      "end_time": "2024-05-20T17:28:33.672454",
@@ -554,6 +555,85 @@
     "# Testing the solution\n",
     "assert subsetXORSumMemo([1,3]) == 6\n",
     "assert subsetXORSumMemo([5,1,6]) == 28"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b399353",
+   "metadata": {},
+   "source": [
+    "Largest Rectangle in a histogram"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1eb77032",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# TLE :(\n",
+    "def largestRectangleArea(heights: list[int]) -> int:\n",
+    "    N = len(heights)\n",
+    "    largest: int = 0\n",
+    "    for i in range(N):\n",
+    "        min_height = heights[i]\n",
+    "        for j in range(i, N):\n",
+    "            min_height = min(min_height, heights[j])\n",
+    "            largest = max(largest, min_height * (j - i + 1))\n",
+    "\n",
+    "    return largest\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert largestRectangleArea([2,1,5,6,2,3]) == 10\n",
+    "assert largestRectangleArea([2,4]) == 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05d83699",
+   "metadata": {},
+   "source": [
+    "Container Queries - CN Weekly - 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9d3612c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def containerQueries(N: int, S: str, query_len: int, queries: list[list[int]]) -> list[int]:\n",
+    "    positions: dict[str, collections.deque[int]] = dict()\n",
+    "    for i in range(N):\n",
+    "        indices = positions.get(S[i], collections.deque())\n",
+    "        indices.append(i)\n",
+    "        positions[S[i]] = indices\n",
+    "\n",
+    "    end_pos = 0\n",
+    "    for k in positions:\n",
+    "        end_pos = max(end_pos, positions[k].popleft())\n",
+    "\n",
+    "    dp: list[int] = [end_pos]\n",
+    "    for i in range(1, N):\n",
+    "        prev = S[i - 1]\n",
+    "        next_pos = max(dp[-1], positions[prev].popleft() if positions[prev] else N)\n",
+    "        dp.append(next_pos)\n",
+    "\n",
+    "    result: list[int] = []\n",
+    "    for i, j in queries:\n",
+    "        if j >= dp[i]:\n",
+    "            result.append(1)\n",
+    "        else:\n",
+    "            result.append(0)\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert containerQueries(8, \"yukppuyk\", 2, [[0,4],[5,7]]) == [1, 0]"
    ]
   }
  ],
