--- a/study/striver-A2Z/13-dp.ipynb
+++ b/study/striver-A2Z/13-dp.ipynb
@@ -6742,6 +6742,7 @@
      "iopub.status.idle": "2024-05-22T17:31:03.529057Z",
      "shell.execute_reply": "2024-05-22T17:31:03.528546Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.025295,
      "end_time": "2024-05-22T17:31:03.530158",
@@ -6775,6 +6776,69 @@
     "\n",
     "# Testing the solution\n",
     "assert minCut(\"racecarmalayalammadam\") == 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ac10060",
+   "metadata": {},
+   "source": [
+    "Video Link: https://youtu.be/PhWWJmaKfMc?si=H-WauOziRcL4hSvH\n",
+    "Partition array for Maximum sum: https://leetcode.com/problems/partition-array-for-maximum-sum/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa20e840",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/partition-array-for-maximum-sum/submissions/1265345168\n",
+    "def maxSumAfterPartitioningMemo(arr: list[int], partition_len: int) -> int:\n",
+    "    @functools.cache\n",
+    "    def backtrack(i: int) -> int:\n",
+    "        max_sum, partition_max = 0, arr[i] if i < N else 0\n",
+    "        for k in range(i, min(i + partition_len, N)):\n",
+    "            partition_max = max(partition_max, arr[k])\n",
+    "            max_sum = max(max_sum, (partition_max * (k - i + 1)) + backtrack(k + 1))\n",
+    "\n",
+    "        return max_sum\n",
+    "\n",
+    "    N = len(arr)\n",
+    "    return backtrack(0)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert maxSumAfterPartitioningMemo([1,15,7,9,2,5,10], 3) == 84\n",
+    "assert maxSumAfterPartitioningMemo([1,4,1,5,7,3,6,1,9,9,3], 4) == 83\n",
+    "assert maxSumAfterPartitioningMemo([1], 1) == 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b99c657b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/partition-array-for-maximum-sum/submissions/1265346933/\n",
+    "def maxSumAfterPartitioningTab(arr: list[int], partition_len: int) -> int:\n",
+    "    N = len(arr)\n",
+    "    dp: list[int] = [0 for i in range(N + 1)]\n",
+    "    for i in range(N - 1, -1, -1):\n",
+    "        partition_max = arr[i]\n",
+    "        for k in range(i, min(i + partition_len, N)):\n",
+    "            partition_max = max(partition_max, arr[k])\n",
+    "            dp[i] = max(dp[i], (partition_max * (k - i + 1)) + dp[k + 1])\n",
+    "\n",
+    "    return dp[0]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert maxSumAfterPartitioningTab([1,15,7,9,2,5,10], 3) == 84\n",
+    "assert maxSumAfterPartitioningTab([1,4,1,5,7,3,6,1,9,9,3], 4) == 83\n",
+    "assert maxSumAfterPartitioningTab([1], 1) == 1"
    ]
   }
  ],
