Striver A2Z: Linked List - 1
Completed DP Series
Started with Linked List series

--- a/practice/003.ipynb
+++ b/practice/003.ipynb
@@ -586,32 +586,49 @@
      "shell.execute_reply": "2024-05-23T15:53:37.506701Z"
     },
     "lines_to_next_cell": 1,
-    "papermill": {
-     "duration": 0.008018,
-     "end_time": "2024-05-23T15:53:37.508284",
-     "exception": false,
-     "start_time": "2024-05-23T15:53:37.500266",
-     "status": "completed"
-    },
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# TLE :(\n",
+    "# https://leetcode.com/problems/largest-rectangle-in-histogram/submissions/1266278725\n",
     "def largestRectangleArea(heights: list[int]) -> int:\n",
-    "    N = len(heights)\n",
-    "    largest: int = 0\n",
-    "    for i in range(N):\n",
-    "        min_height = heights[i]\n",
-    "        for j in range(i, N):\n",
-    "            min_height = min(min_height, heights[j])\n",
-    "            largest = max(largest, min_height * (j - i + 1))\n",
+    "    \"\"\"\n",
+    "    Count the number of rectangles to the right that are greater than or equal to self\n",
+    "    Count the number of rectangles to the left that are greater than or equal to self\n",
+    "    \"\"\"\n",
     "\n",
-    "    return largest\n",
+    "    N = len(heights)\n",
+    "\n",
+    "    right_dp: list[int] = [N - i for i in range(N)]\n",
+    "    left_dp: list[int] = [i + 1 for i in range(N)]\n",
+    "    stack: list[tuple[int, int]] = []\n",
+    "\n",
+    "    for i in range(N):\n",
+    "        curr: tuple[int, int] = (heights[i], i)\n",
+    "        while stack and stack[-1][0] > curr[0]:\n",
+    "            prev = stack.pop()\n",
+    "            right_dp[prev[1]] = curr[1] - prev[1]\n",
+    "        stack.append(curr)\n",
+    "\n",
+    "    stack.clear()\n",
+    "\n",
+    "    for i in range(N - 1, -1, -1):\n",
+    "        curr = (heights[i], i)\n",
+    "        while stack and stack[-1][0] > curr[0]:\n",
+    "            prev = stack.pop()\n",
+    "            left_dp[prev[1]] = prev[1] - curr[1]\n",
+    "        stack.append(curr)\n",
+    "\n",
+    "    max_ = 0\n",
+    "    for i in range(N):\n",
+    "        max_ = max(max_, (left_dp[i] + right_dp[i] - 1) * heights[i])\n",
+    "\n",
+    "    return max_\n",
     "\n",
     "# Testing the solution\n",
     "assert largestRectangleArea([2,1,5,6,2,3]) == 10\n",
-    "assert largestRectangleArea([2,4]) == 4"
+    "assert largestRectangleArea([2,4]) == 4\n",
+    "assert largestRectangleArea([2,1,2]) == 3"
    ]
   },
   {
