--- a/study/striver-A2Z/13-dp.ipynb
+++ b/study/striver-A2Z/13-dp.ipynb
@@ -6850,6 +6850,7 @@
      "iopub.status.idle": "2024-05-23T15:53:46.896241Z",
      "shell.execute_reply": "2024-05-23T15:53:46.895828Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.02527,
      "end_time": "2024-05-23T15:53:46.897294",
@@ -6877,6 +6878,196 @@
     "assert maxSumAfterPartitioningTab([1,15,7,9,2,5,10], 3) == 84\n",
     "assert maxSumAfterPartitioningTab([1,4,1,5,7,3,6,1,9,9,3], 4) == 83\n",
     "assert maxSumAfterPartitioningTab([1], 1) == 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9443fb6d",
+   "metadata": {},
+   "source": [
+    "Video Link: https://youtu.be/tOylVCugy9k?si=k4-22OPYjlUCexAT\n",
+    "Maximum rectangle with all 1s: https://leetcode.com/problems/maximal-rectangle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c8d2dff",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/maximal-rectangle/submissions/1266681280/\n",
+    "def maximalRectangle(matrix: list[list[str]]) -> int:\n",
+    "    \"\"\"\n",
+    "    - For each cell, calculate count of 1s to the \"right\" and the below (\"down\")\n",
+    "\n",
+    "    - For each cell\n",
+    "        right_count: Calculate count of rows to the right that are greater than or equal to \"down\"\n",
+    "        down_count: Calculate count of rows to the down that are greater than or equal to \"right\"\n",
+    "        Area is max(right * right_count, down * down_count)\n",
+    "\n",
+    "    - Find max of all such areas\n",
+    "    \"\"\"\n",
+    "\n",
+    "    ROWS, COLS = len(matrix), len(matrix[0])\n",
+    "    dp: list[list[tuple[int, int]]] = [[(1, 1) if matrix[i][j] == \"1\" else (0, 0) for j in range(COLS)] for i in range(ROWS)]\n",
+    "    for i in range(ROWS - 1, -1, -1):\n",
+    "        for j in range(COLS - 1, -1, -1):\n",
+    "            if matrix[i][j] == \"1\":\n",
+    "                RIGHT = (dp[i][j + 1][0] if j + 1 < COLS else 0) + 1\n",
+    "                DOWN = (dp[i + 1][j][1] if i + 1 < ROWS else 0) + 1\n",
+    "                dp[i][j] = RIGHT, DOWN\n",
+    "\n",
+    "    right_counts: list[list[int]] = [[COLS - j for j in range(COLS)] for i in range(ROWS)]\n",
+    "    for i in range(ROWS):\n",
+    "        stack: list[tuple[int, int]] = []\n",
+    "        for j in range(COLS):\n",
+    "            curr = dp[i][j][1], j\n",
+    "            while stack and stack[-1][0] > curr[0]:\n",
+    "                prev = stack.pop()\n",
+    "                right_counts[i][prev[1]] = curr[1] - prev[1]\n",
+    "            stack.append(curr)\n",
+    "\n",
+    "    left_counts: list[list[int]] = [[j + 1 for j in range(COLS)] for i in range(ROWS)]\n",
+    "    for i in range(ROWS):\n",
+    "        stack = []\n",
+    "        for j in range(COLS - 1, -1, -1):\n",
+    "            curr = dp[i][j][1], j\n",
+    "            while stack and stack[-1][0] > curr[0]:\n",
+    "                prev = stack.pop()\n",
+    "                left_counts[i][prev[1]] =  prev[1] - curr[1]\n",
+    "            stack.append(curr)\n",
+    "\n",
+    "    down_counts: list[list[int]] = [[ROWS - i for j in range(COLS)] for i in range(ROWS)]\n",
+    "    for j in range(COLS):\n",
+    "        stack = []\n",
+    "        for i in range(ROWS):\n",
+    "            curr = dp[i][j][0], i\n",
+    "            while stack and stack[-1][0] > curr[0]:\n",
+    "                prev = stack.pop()\n",
+    "                down_counts[prev[1]][j] = curr[1] - prev[1]\n",
+    "            stack.append(curr)\n",
+    "\n",
+    "    up_counts: list[list[int]] = [[i + 1 for j in range(COLS)] for i in range(ROWS)]\n",
+    "    for j in range(COLS):\n",
+    "        stack = []\n",
+    "        for i in range(ROWS - 1, -1, -1):\n",
+    "            curr = dp[i][j][0], i\n",
+    "            while stack and stack[-1][0] > curr[0]:\n",
+    "                prev = stack.pop()\n",
+    "                up_counts[prev[1]][j] =  prev[1] - curr[1]\n",
+    "            stack.append(curr)\n",
+    "\n",
+    "    max_ = 0\n",
+    "    for i in range(ROWS):\n",
+    "        for j in range(COLS):\n",
+    "            if matrix[i][j] == \"1\":\n",
+    "                max_ = max(max_, dp[i][j][1] * (right_counts[i][j] + left_counts[i][j] - 1), dp[i][j][0] * (down_counts[i][j] + up_counts[i][j] - 1))\n",
+    "\n",
+    "    return max_\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert maximalRectangle([[\"1\",\"0\",\"1\",\"0\",\"0\"],[\"1\",\"0\",\"1\",\"1\",\"1\"],[\"1\",\"1\",\"1\",\"1\",\"1\"],[\"1\",\"0\",\"0\",\"1\",\"0\"]]) == 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a97d2b3b",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Striver's Solution\n",
+    "# https://leetcode.com/problems/maximal-rectangle/submissions/1266698905/\n",
+    "def maximalRectangleStriver(matrix: list[list[str]]) -> int:\n",
+    "    \"\"\"\n",
+    "    For each row compute the elevation and compute the largest rectangle in that histogram.\n",
+    "    If prev cell is 0 for j, reset elevation as 0. Otherwise increase elevation by 1.\n",
+    "\n",
+    "    Find maximum of all largestRectangleAreas for all rows.\n",
+    "\n",
+    "    Time: O (N ^ 2), Space: O(N)\n",
+    "    \"\"\"\n",
+    "    def largestRectangleArea(heights: list[int]) -> int:\n",
+    "        N = len(heights)\n",
+    "\n",
+    "        stack: list[int] = []\n",
+    "        right_dp: list[int] = [N - i for i in range(N)]\n",
+    "        for i in range(N):\n",
+    "            while stack and heights[stack[-1]] > heights[i]:\n",
+    "                prev = stack.pop()\n",
+    "                right_dp[prev] = i - prev\n",
+    "            stack.append(i)\n",
+    "\n",
+    "        stack = []\n",
+    "        left_dp: list[int] = [i + 1 for i in range(N)]\n",
+    "        for i in range(N - 1, -1, -1):\n",
+    "            while stack and heights[stack[-1]] > heights[i]:\n",
+    "                prev = stack.pop()\n",
+    "                left_dp[prev] = prev - i\n",
+    "            stack.append(i)\n",
+    "\n",
+    "        max_ = 0\n",
+    "        for i in range(N):\n",
+    "            max_ = max(max_, heights[i] * (left_dp[i] + right_dp[i] - 1))\n",
+    "\n",
+    "        return max_\n",
+    "\n",
+    "    ROWS, COLS = len(matrix), len(matrix[0])\n",
+    "\n",
+    "    max_ = 0\n",
+    "    curr: list[int] = [0 for j in range(COLS)]\n",
+    "    for i in range(ROWS):\n",
+    "        for j in range(COLS):\n",
+    "            if matrix[i][j] == \"1\":\n",
+    "                curr[j] += 1\n",
+    "            else:\n",
+    "                curr[j] = 0\n",
+    "\n",
+    "        max_ = max(max_, largestRectangleArea(curr))\n",
+    "\n",
+    "    return max_\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert maximalRectangleStriver([[\"1\",\"0\",\"1\",\"0\",\"0\"],[\"1\",\"0\",\"1\",\"1\",\"1\"],[\"1\",\"1\",\"1\",\"1\",\"1\"],[\"1\",\"0\",\"0\",\"1\",\"0\"]]) == 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "969fa14d",
+   "metadata": {},
+   "source": [
+    "Count max submatrices with all 1s\n",
+    "Video Link: https://youtu.be/auS1fynpnjo?si=ZGi2fdRHjjiYKI1I\n",
+    "Problem link: https://leetcode.com/problems/count-square-submatrices-with-all-ones/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39b4132b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/count-square-submatrices-with-all-ones/submissions/1266717874\n",
+    "def countSquares(matrix: list[list[int]]) -> int:\n",
+    "    square_count = 0\n",
+    "    ROWS, COLS = len(matrix), len(matrix[0])\n",
+    "    for i in range(ROWS - 1, -1, -1):\n",
+    "        for j in range(COLS - 1, -1, -1):\n",
+    "            if matrix[i][j] == 1:\n",
+    "                matrix[i][j] = 1 + min(matrix[i][j + 1] if j + 1 < COLS else 0, matrix[i + 1][j] if i + 1 < ROWS else 0, matrix[i + 1][j + 1] if i + 1 < ROWS and j + 1 < COLS else 0)\n",
+    "                square_count += matrix[i][j]\n",
+    "\n",
+    "    return square_count\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert countSquares([[1,0,1],[1,1,0],[1,1,0]]) == 7\n",
+    "assert countSquares([[0,1,1,1],[1,1,1,1],[0,1,1,1]]) == 15"
    ]
   }
  ],
