Striver A2Z: Linked List - 2

--- a/practice/003.ipynb
+++ b/practice/003.ipynb
@@ -666,6 +666,7 @@
      "iopub.status.idle": "2024-05-24T15:47:26.384202Z",
      "shell.execute_reply": "2024-05-24T15:47:26.383679Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.009813,
      "end_time": "2024-05-24T15:47:26.385387",
@@ -705,6 +706,140 @@
     "\n",
     "# Testing the solution\n",
     "assert containerQueries(8, \"yukppuyk\", 2, [[0,4],[5,7]]) == [1, 0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bdba0c2a",
+   "metadata": {},
+   "source": [
+    "LC Biweekly 131: 25th May 2024"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65434525",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q1\n",
+    "def duplicateNumbersXOR(nums: list[int]) -> int:\n",
+    "    set_: set[int] = set()\n",
+    "    result: int = 0\n",
+    "    for n in nums:\n",
+    "        if n not in set_:\n",
+    "            set_.add(n)\n",
+    "        else:\n",
+    "            result = result ^ n\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert duplicateNumbersXOR([1,2,1,3]) == 1\n",
+    "assert duplicateNumbersXOR([1,2,3]) == 0\n",
+    "assert duplicateNumbersXOR([1,2,2,1]) == 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dcade46b",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q2\n",
+    "def occurrencesOfElement(nums: list[int], queries: list[int], x: int) -> list[int]:\n",
+    "    N = len(nums)\n",
+    "    occurance: int = 0\n",
+    "    indices: dict[int, int] = dict()\n",
+    "    for i in range(N):\n",
+    "        if nums[i] == x:\n",
+    "            indices[occurance] = i\n",
+    "            occurance += 1\n",
+    "\n",
+    "    result: list[int] = []\n",
+    "    for q in queries:\n",
+    "        result.append(indices.get(q - 1, -1))\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert occurrencesOfElement([1,1,1], [1,2,3,4], 1) == [0,1,2,-1]\n",
+    "assert occurrencesOfElement([1,3,1,7], [1,3,2,4], 1) == [0,-1,2,-1]\n",
+    "assert occurrencesOfElement([1,2,3], [10], 5) == [-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "044267dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Q3\n",
+    "def queryResults(limit: int, queries: list[list[int]]) -> list[int]:\n",
+    "    color_map: dict[int, set[int]] = dict()\n",
+    "    ball_map: dict[int, int] = dict()\n",
+    "\n",
+    "    result: list[int] = []\n",
+    "    for ball, color in queries:\n",
+    "        old_color = ball_map.get(ball, 0)\n",
+    "        if old_color > 0:\n",
+    "            color_map[old_color].remove(ball)\n",
+    "            if len(color_map[old_color]) == 0:\n",
+    "                del color_map[old_color]\n",
+    "\n",
+    "        balls = color_map.get(color, set())\n",
+    "        balls.add(ball)\n",
+    "        color_map[color] = balls\n",
+    "        ball_map[ball] = color\n",
+    "\n",
+    "        result.append(len(color_map))\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert queryResults(4, [[0,1],[1,2],[2,2],[3,4],[4,5]]) == [1,2,2,3,4]\n",
+    "assert queryResults(4, [[1,4],[2,5],[1,3],[3,4]]) == [1,2,2,3]\n",
+    "assert queryResults(1, [[0,10],[1,10]]) == [1,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba1be302",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Q4: TLE :(\n",
+    "import bisect\n",
+    "\n",
+    "def getResultsBrute(queries: list[list[int]]) -> list[bool]:\n",
+    "    obstacles: list[int] = [0]\n",
+    "    result: list[bool] = []\n",
+    "\n",
+    "    for q in queries:\n",
+    "        if len(q) == 2:\n",
+    "            bisect.insort(obstacles, q[1])\n",
+    "        else:\n",
+    "            x, sz = q[1], q[2]\n",
+    "            idx = bisect.bisect_left(obstacles, x)\n",
+    "            max_size = x - obstacles[idx - 1]\n",
+    "            for i in range(1, idx):\n",
+    "                max_size = max(max_size, obstacles[i] - obstacles[i - 1])\n",
+    "\n",
+    "            result.append(max_size >= sz)\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert getResultsBrute([[1,2],[2,3,3],[2,3,1],[2,2,2]]) == [False, True, True]\n",
+    "assert getResultsBrute([[1,7],[2,7,6],[1,2],[2,7,5],[2,7,6]]) == [True,True,False]"
    ]
   }
  ],
