--- a/study/striver-A2Z/14-linked-list.ipynb
+++ b/study/striver-A2Z/14-linked-list.ipynb
@@ -264,6 +264,7 @@
      "iopub.status.idle": "2024-05-24T15:47:38.940368Z",
      "shell.execute_reply": "2024-05-24T15:47:38.939918Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.006764,
      "end_time": "2024-05-24T15:47:38.941552",
@@ -287,6 +288,135 @@
     "\n",
     "# Testing the solution\n",
     "assert searchInLinkedList(ListNode.to_singly_linked_list([1,2,3,4]), 4) == 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73478462",
+   "metadata": {},
+   "source": [
+    "Delete a node from linked list\n",
+    "https://www.geeksforgeeks.org/problems/delete-a-node-in-single-linked-list/1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5bd512fc",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def delNodePos(head: ListNode, k: int):\n",
+    "    if not head or k == 0:\n",
+    "        return head\n",
+    "    elif k == 1:\n",
+    "        return head.next\n",
+    "    else:\n",
+    "        count: int = 0\n",
+    "        prev: ListNode|None = None\n",
+    "        curr: ListNode|None = head\n",
+    "\n",
+    "        while curr:\n",
+    "            count += 1\n",
+    "            if count == k and prev:\n",
+    "                prev.next = prev.next.next\n",
+    "                break\n",
+    "            else:\n",
+    "                prev, curr = curr, curr.next\n",
+    "\n",
+    "        return head\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert delNodePos(ListNode.to_singly_linked_list([1,2]), 2).to_list() == [1]\n",
+    "assert delNodePos(ListNode.to_singly_linked_list([1,2]), 1).to_list() == [2]\n",
+    "assert delNodePos(ListNode.to_singly_linked_list([1]), 1) is None\n",
+    "assert delNodePos(ListNode.to_singly_linked_list([1]), 10).to_list() == [1]\n",
+    "assert delNodePos(ListNode.to_singly_linked_list([1,2,3]), 10).to_list() == [1,2,3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ea5a2c5",
+   "metadata": {},
+   "source": [
+    "Delete node by value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "420f38cf",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def delNodeVal(head: ListNode, val: int):\n",
+    "    if not head:\n",
+    "        return head\n",
+    "    elif head.val == val:\n",
+    "        return head.next\n",
+    "    else:\n",
+    "        prev: ListNode|None = None\n",
+    "        curr: ListNode|None = head\n",
+    "        while curr:\n",
+    "            if curr.val == val and prev:\n",
+    "                prev.next = prev.next.next\n",
+    "                break\n",
+    "            else:\n",
+    "                prev, curr = curr, curr.next\n",
+    "\n",
+    "        return head\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert delNodeVal(ListNode.to_singly_linked_list([1,2]), 2).to_list() == [1]\n",
+    "assert delNodeVal(ListNode.to_singly_linked_list([1,2]), 1).to_list() == [2]\n",
+    "assert delNodeVal(ListNode.to_singly_linked_list([1]), 1) is None\n",
+    "assert delNodeVal(ListNode.to_singly_linked_list([1]), 10).to_list() == [1]\n",
+    "assert delNodeVal(ListNode.to_singly_linked_list([1,2,3]), 3).to_list() == [1,2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53646359",
+   "metadata": {},
+   "source": [
+    "Inserting into a linked list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9de3ec91",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def insertNode(head: ListNode, N: int, pos: int, val: int) -> ListNode:\n",
+    "    node = ListNode(val)\n",
+    "    if pos == 0:\n",
+    "        node.next = head\n",
+    "        return node\n",
+    "    else:\n",
+    "        prev: ListNode|None = None\n",
+    "        curr: ListNode|None = head\n",
+    "\n",
+    "        count = 0\n",
+    "        while count < pos:\n",
+    "            count += 1\n",
+    "            if curr:\n",
+    "                prev, curr = curr, curr.next\n",
+    "\n",
+    "        if prev:\n",
+    "            prev.next = node\n",
+    "            node.next = curr\n",
+    "\n",
+    "        return head\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert insertNode(ListNode.to_singly_linked_list([1,2,3,4]), 4, 0, 0).to_list() == [0,1,2,3,4]\n",
+    "assert insertNode(ListNode.to_singly_linked_list([]), 0, 0, 0).to_list() == [0]"
    ]
   }
  ],
