--- a/study/striver-A2Z/14-linked-list.ipynb
+++ b/study/striver-A2Z/14-linked-list.ipynb
@@ -130,6 +130,52 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8f195f7d",
+   "metadata": {},
+   "source": [
+    "#### Helper for Doubly Linked lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d9ad38e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DLLNode:\n",
+    "    def __init__(self, val: int = 0, next_=None, prev = None):\n",
+    "        self.val = val\n",
+    "        self.next = next_\n",
+    "        self.prev = next_\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return str(self.val)\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def to_doubly_linked_list(nums: list[int]):\n",
+    "        head = prev = None\n",
+    "        for n in nums:\n",
+    "            curr = DLLNode(n)\n",
+    "            if prev:\n",
+    "                prev.next = curr\n",
+    "                curr.prev = prev\n",
+    "            else:\n",
+    "                head = curr\n",
+    "            prev = curr\n",
+    "        return head\n",
+    "\n",
+    "    def to_list(self) -> list[int]:\n",
+    "        result = []\n",
+    "        curr = self\n",
+    "        while curr:\n",
+    "            result.append(curr.val)\n",
+    "            curr = curr.next\n",
+    "        return result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3bd55ce0",
    "metadata": {
     "papermill": {
@@ -452,6 +498,7 @@
      "iopub.status.idle": "2024-05-25T16:09:03.235480Z",
      "shell.execute_reply": "2024-05-25T16:09:03.235045Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.008243,
      "end_time": "2024-05-25T16:09:03.236624",
@@ -487,6 +534,405 @@
     "# Testing the solution\n",
     "assert insertNode(ListNode.to_singly_linked_list([1,2,3,4]), 4, 0, 0).to_list() == [0,1,2,3,4]\n",
     "assert insertNode(ListNode.to_singly_linked_list([]), 0, 0, 0).to_list() == [0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80af1929",
+   "metadata": {},
+   "source": [
+    "### Doubly Linked List\n",
+    "Construct doubly linked list from array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d2d3de2",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def constructDLL(arr: list[int]) -> DLLNode:\n",
+    "    head: DLLNode|None =  None\n",
+    "    prev: DLLNode|None =  None\n",
+    "\n",
+    "    for n in arr:\n",
+    "        curr = DLLNode(n)\n",
+    "        if prev:\n",
+    "            prev.next = curr\n",
+    "            curr.prev = prev\n",
+    "        else:\n",
+    "            head = curr\n",
+    "        prev = curr\n",
+    "\n",
+    "    return head # type: ignore\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert constructDLL([1,2,3,4,5]).to_list() == [1,2,3,4,5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57e40a96",
+   "metadata": {},
+   "source": [
+    "Inserting into a Doubly linked list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eeae0793",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def addDLLNode(head: DLLNode, p: int, data: int) -> DLLNode:\n",
+    "    node: DLLNode = DLLNode(data)\n",
+    "    prev: DLLNode = head\n",
+    "\n",
+    "    while p > 0:\n",
+    "        p -= 1\n",
+    "        prev = prev.next\n",
+    "\n",
+    "    next_ = prev.next\n",
+    "    node.next = next_\n",
+    "    prev.next = node\n",
+    "    node.prev = prev\n",
+    "\n",
+    "    if next_:\n",
+    "        next_.prev = node\n",
+    "\n",
+    "    return head\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert addDLLNode(DLLNode.to_doubly_linked_list([2,4,5]), 2, 6).to_list() == [2,4,5,6]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4cebaf84",
+   "metadata": {},
+   "source": [
+    "Deleting from a doubly linked list\n",
+    "```\n",
+    "Easier way still would be to write all edge cases specifically\n",
+    "If curr is null (and prev, next are null), we have no nodes to delete\n",
+    "If prev and next is null, we have only 1 node to delete\n",
+    "If prev is null, we are to delete the head node\n",
+    "If next is null, we are to delete the tail node\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e1cf229",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def deleteDLLNode(head: DLLNode, p: int):\n",
+    "    curr: DLLNode = head\n",
+    "\n",
+    "    count = p\n",
+    "    while count > 0:\n",
+    "        count -= 1\n",
+    "        curr = curr.next\n",
+    "\n",
+    "    prev = curr.prev\n",
+    "    next_ = curr.next\n",
+    "\n",
+    "    if prev:\n",
+    "        prev.next = next_\n",
+    "    if next_:\n",
+    "        next_.prev = prev\n",
+    "\n",
+    "    return head if p > 0 else head.next\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert deleteDLLNode(DLLNode.to_doubly_linked_list([1,2]), 1).to_list() == [1]\n",
+    "assert deleteDLLNode(DLLNode.to_doubly_linked_list([1,2]), 0).to_list() == [2]\n",
+    "assert deleteDLLNode(DLLNode.to_doubly_linked_list([1]), 0) is None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dfa8d518",
+   "metadata": {},
+   "source": [
+    "Reverse a DLL\n",
+    "Video Link: https://youtu.be/u3WUW2qe6ww?si=80DlW_QGoHKnBDjY"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aac2ae31",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def reverseDLL(head: DLLNode) -> DLLNode:\n",
+    "    prev: DLLNode = None # type: ignore\n",
+    "    curr: DLLNode = head\n",
+    "\n",
+    "    while curr:\n",
+    "        curr.next, curr.prev = prev, curr.next\n",
+    "        prev, curr = curr, curr.prev\n",
+    "\n",
+    "    return prev\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert reverseDLL(DLLNode.to_doubly_linked_list([1,2])).to_list() == [2,1]\n",
+    "assert reverseDLL(DLLNode.to_doubly_linked_list([2])).to_list() == [2]\n",
+    "assert reverseDLL(DLLNode.to_doubly_linked_list([1,2,3,4])).to_list() == [4,3,2,1]\n",
+    "assert reverseDLL(DLLNode.to_doubly_linked_list([])) is None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c7d5007",
+   "metadata": {},
+   "source": [
+    "Add two numbers\n",
+    "Video Link: https://youtu.be/XmRrGzR6udg?si=0Wc8Sp_7v8a_2kPp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a271620",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def addTwoNumbers(head1: ListNode, head2: ListNode) -> ListNode:\n",
+    "    n1, n2 = head1, head2\n",
+    "    sum_head: ListNode|None = None\n",
+    "    sum_node: ListNode|None = None\n",
+    "    carry_forward = 0\n",
+    "\n",
+    "    # Carry_forward is kept here so that in cases where both are exhausted \n",
+    "    # and we still have 1 (say 5 + 5, both are exhausted but carry exists)\n",
+    "    while n1 or n2 or carry_forward:\n",
+    "        sum_ = carry_forward\n",
+    "\n",
+    "        if n1:\n",
+    "            sum_ += n1.val\n",
+    "            n1 = n1.next\n",
+    "        if n2:\n",
+    "            sum_ += n2.val\n",
+    "            n2 = n2.next\n",
+    "\n",
+    "        sum_, carry_forward = sum_ % 10, sum_ // 10\n",
+    "        curr = ListNode(sum_)\n",
+    "        if not sum_node:\n",
+    "            sum_head = sum_node = curr\n",
+    "        else:\n",
+    "            sum_node.next = curr\n",
+    "            sum_node = curr\n",
+    "\n",
+    "    return sum_head # type: ignore\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert addTwoNumbers(ListNode.to_singly_linked_list([2,4,6]), ListNode.to_singly_linked_list([3,8,7])).to_list() == [5,2,4,1]\n",
+    "assert addTwoNumbers(ListNode.to_singly_linked_list([3,5]), ListNode.to_singly_linked_list([4,5,9,9])).to_list() == [7,0,0,0,1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d492d94",
+   "metadata": {},
+   "source": [
+    "Odd Even Linked List: https://leetcode.com/problems/odd-even-linked-list/description/\n",
+    "Video Link: https://youtu.be/qf6qp7GzD5Q?si=f0kxJQ7bJ8JSSZGe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed28b236",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/odd-even-linked-list/submissions/1268536963/\n",
+    "def oddEvenList(head: ListNode) -> ListNode:\n",
+    "    \"\"\"\n",
+    "    The trick here lies in the fact that we should alter the links instead of\n",
+    "    trying to alter the values, since we need a O(1) Space, O(N) time complexity.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Handling edge case\n",
+    "    if not head:\n",
+    "        return head\n",
+    "\n",
+    "    # Split work into creating the even and odd LLs\n",
+    "    oddHead = odd = head\n",
+    "    evenHead = even = head.next\n",
+    "\n",
+    "    # It is possible that we iterate until we reach either odd or even\n",
+    "    # Checking for even makes code simpler, odd makes it more messy\n",
+    "    while even and even.next:\n",
+    "        odd.next = odd.next.next\n",
+    "        even.next = even.next.next\n",
+    "        even, odd = even.next, odd.next\n",
+    "\n",
+    "    # Once odd and even LL are constructed, odd next should point to evenHead\n",
+    "    odd.next = evenHead # type: ignore\n",
+    "    return oddHead\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert oddEvenList(ListNode.to_singly_linked_list([1,2,3,4,5])).to_list() == [1,3,5,2,4]\n",
+    "assert oddEvenList(ListNode.to_singly_linked_list([1,2,3,4])).to_list() == [1,3,2,4]\n",
+    "assert oddEvenList(ListNode.to_singly_linked_list([1,2])).to_list() == [1,2]\n",
+    "assert oddEvenList(ListNode.to_singly_linked_list([1])).to_list() == [1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da1e9ff5",
+   "metadata": {},
+   "source": [
+    "Sorted linked list of 0s, 1s, 2s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "283f2b99",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def sortList012Idea1(head: ListNode) -> ListNode:\n",
+    "    count0 = count1 = count2 = 0\n",
+    "\n",
+    "    # Iterate and compute the counts\n",
+    "    curr = head\n",
+    "    while curr:\n",
+    "        if curr.val == 0:\n",
+    "            count0 += 1\n",
+    "        elif curr.val == 1:\n",
+    "            count1 += 1\n",
+    "        else:\n",
+    "            count2 += 1\n",
+    "        curr = curr.next\n",
+    "\n",
+    "    # Replace the values\n",
+    "    curr = head\n",
+    "    while curr:\n",
+    "        if count0 > 0:\n",
+    "            curr.val, count0 = 0, count0 - 1\n",
+    "        elif count1 > 0:\n",
+    "            curr.val, count1 = 1, count1 - 1\n",
+    "        else:\n",
+    "            curr.val, count2 = 2, count2 - 1\n",
+    "        curr = curr.next\n",
+    "\n",
+    "    return head\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert sortList012Idea1(ListNode.to_singly_linked_list([1,0,2,1,0,1,0,2])).to_list() == [0,0,0,1,1,1,2,2]\n",
+    "assert sortList012Idea1(ListNode.to_singly_linked_list([2,1])).to_list() == [1,2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04a13e4d",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def sortList012Idea2(head: ListNode) -> ListNode:\n",
+    "\n",
+    "    # Maintain position until which the LL is sorted\n",
+    "    sorted_end: ListNode = head\n",
+    "\n",
+    "    # Sort 0s\n",
+    "    curr = sorted_end\n",
+    "    while curr:\n",
+    "        if curr.val == 0:\n",
+    "            sorted_end.val, curr.val = curr.val, sorted_end.val\n",
+    "            sorted_end = sorted_end.next\n",
+    "        curr = curr.next\n",
+    "\n",
+    "    # Sort 1s\n",
+    "    curr = sorted_end\n",
+    "    while curr:\n",
+    "        if curr.val == 1:\n",
+    "            sorted_end.val, curr.val = curr.val, sorted_end.val\n",
+    "            sorted_end = sorted_end.next\n",
+    "        curr = curr.next\n",
+    "\n",
+    "    return head\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert sortList012Idea2(ListNode.to_singly_linked_list([1,0,2,1,0,1,0,2])).to_list() == [0,0,0,1,1,1,2,2]\n",
+    "assert sortList012Idea2(ListNode.to_singly_linked_list([2,1])).to_list() == [1,2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b07c320",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Striver Idea 3: One pass solution, similar to odd even list problem\n",
+    "def sortList012Idea3(head: ListNode) -> ListNode:\n",
+    "    # Time: O(N), Space: O(1)\n",
+    "    head0: ListNode = None # type: ignore\n",
+    "    head1: ListNode = None # type: ignore\n",
+    "    head2: ListNode = None # type: ignore\n",
+    "\n",
+    "    curr = head\n",
+    "    zero = one = two = None\n",
+    "    while curr:\n",
+    "        next_ = curr.next\n",
+    "        if curr.val == 0:\n",
+    "            if not zero:\n",
+    "                head0 = zero = curr\n",
+    "            else:\n",
+    "                zero.next = curr\n",
+    "                zero = curr\n",
+    "        elif curr.val == 1:\n",
+    "            if not one:\n",
+    "                head1 = one = curr\n",
+    "            else:\n",
+    "                one.next = curr\n",
+    "                one = curr\n",
+    "        else:\n",
+    "            if not two:\n",
+    "                head2 = two = curr\n",
+    "            else:\n",
+    "                two.next = curr\n",
+    "                two = curr\n",
+    "\n",
+    "        curr.next, curr = None, next_\n",
+    "\n",
+    "    if zero:\n",
+    "        zero.next = head1\n",
+    "    if one:\n",
+    "        one.next = head2\n",
+    "\n",
+    "    return head0 if head0 else head1 if head1 else head2\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert sortList012Idea3(ListNode.to_singly_linked_list([1,0,2,1,0,1,0,2])).to_list() == [0,0,0,1,1,1,2,2]\n",
+    "assert sortList012Idea3(ListNode.to_singly_linked_list([2,1])).to_list() == [1,2]\n",
+    "assert sortList012Idea3(ListNode.to_singly_linked_list([1,0])).to_list() == [0,1]"
    ]
   }
  ],
