Striver A2Z: Linked List - 7
CN Weekly contest attempted

--- a/practice/003.ipynb
+++ b/practice/003.ipynb
@@ -872,6 +872,7 @@
      "iopub.status.idle": "2024-05-25T16:09:00.978388Z",
      "shell.execute_reply": "2024-05-25T16:09:00.977945Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.009939,
      "end_time": "2024-05-25T16:09:00.979438",
@@ -907,6 +908,64 @@
     "# Testing the solution\n",
     "assert getResultsBrute([[1,2],[2,3,3],[2,3,1],[2,2,2]]) == [False, True, True]\n",
     "assert getResultsBrute([[1,7],[2,7,6],[1,2],[2,7,5],[2,7,6]]) == [True,True,False]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc475105",
+   "metadata": {},
+   "source": [
+    "CN Weekly Contest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fbb5da0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Q2 - Easy\n",
+    "def minimumLength(s1: str, s2: str) -> int:\n",
+    "    N, M = len(s1), len(s2)\n",
+    "\n",
+    "    if s1 in s2:\n",
+    "        return M\n",
+    "\n",
+    "    elif s2 in s1:\n",
+    "        return N\n",
+    "\n",
+    "    else:\n",
+    "        # Store the indices where s1[0] and s1[-1] are found\n",
+    "        left: list[int] = []\n",
+    "        right: list[int] = []\n",
+    "        for i in range(M):\n",
+    "            if s2[i] == s1[0]:\n",
+    "                right.append(i)\n",
+    "            if s2[i] == s1[-1]:\n",
+    "                left.append(i)\n",
+    "\n",
+    "        # Ans is always possible\n",
+    "        min_ = N + M\n",
+    "\n",
+    "        # Check right concatentation\n",
+    "        for i in right:\n",
+    "            overlap_length = M - i\n",
+    "            if s2[i:] == s1[:overlap_length]:\n",
+    "                min_ = min(min_, N + M - overlap_length)\n",
+    "\n",
+    "        # Check left concatentation\n",
+    "        for i in left:\n",
+    "            overlap_length = i + 1\n",
+    "            if s2[:i + 1] == s1[-overlap_length:]:\n",
+    "                min_ = min(min_, N + M - overlap_length)\n",
+    "\n",
+    "        return min_\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert minimumLength(\"abcabc\", \"aaabc\") == 8\n",
+    "assert minimumLength(\"bibia\", \"aibia\") == 9\n",
+    "assert minimumLength(\"aabcabcd\", \"abc\") == 8"
    ]
   }
  ],
