--- a/study/striver-A2Z/14-linked-list.ipynb
+++ b/study/striver-A2Z/14-linked-list.ipynb
@@ -2735,6 +2735,7 @@
      "iopub.status.idle": "2024-05-29T16:38:24.982102Z",
      "shell.execute_reply": "2024-05-29T16:38:24.981605Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.014542,
      "end_time": "2024-05-29T16:38:24.983249",
@@ -2767,6 +2768,254 @@
     "# Testing the solution\n",
     "assert mergeTwoLists(ListNode.to_singly_linked_list([1,2,4]), ListNode.to_singly_linked_list([1,3,4])).to_list() == [1,1,2,3,4,4]\n",
     "assert mergeTwoLists(ListNode.to_singly_linked_list([1,1]), ListNode.to_singly_linked_list([1,2])).to_list() == [1,1,1,2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "635b1ce4",
+   "metadata": {},
+   "source": [
+    "Flattening a linked list\n",
+    "Video Link: https://youtu.be/ykelywHJWLg?si=xEMHwY-n0wADGYA6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e34e33f",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "class GFGFlattenLLNode:\n",
+    "    def __init__(self, data):\n",
+    "        self.data = data\n",
+    "        self.next = None\n",
+    "        self.bottom = None\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return str(self.data)\n",
+    "\n",
+    "    def to_list(self) -> list[int]:\n",
+    "        result: list[int] = []\n",
+    "        horizontal = self\n",
+    "        while horizontal:\n",
+    "            vertical = horizontal\n",
+    "            while vertical:\n",
+    "                result.append(vertical.data)\n",
+    "                vertical = vertical.bottom\n",
+    "            horizontal = horizontal.next\n",
+    "        return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f6d740f",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def generateTestCasesForGFGFlattenLL(N: int, heights: list[int], values: list[int]) -> GFGFlattenLLNode:\n",
+    "    nested: list[GFGFlattenLLNode] = []\n",
+    "    i = 0\n",
+    "    for height in heights:\n",
+    "        nested.append(GFGFlattenLLNode(-1))\n",
+    "        curr = nested[-1]\n",
+    "        while height > 0:\n",
+    "            curr.bottom = GFGFlattenLLNode(values[i])\n",
+    "            curr, i, height = curr.bottom, i + 1, height - 1\n",
+    "        nested[-1] = nested[-1].bottom\n",
+    "\n",
+    "    prev = nested[0]\n",
+    "    for i in range(1, N):\n",
+    "        curr = nested[i]\n",
+    "        prev.next = curr\n",
+    "        prev = curr\n",
+    "\n",
+    "    return nested[0]\n",
+    "\n",
+    "# Testing the test case generator ;)\n",
+    "generateTestCasesForGFGFlattenLL(4, [4,2,3,4], [5,7,8,30,10,20,19,22,50,28,35,40,45]).to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7db963ef",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def GFGflattenLL(root) -> GFGFlattenLLNode:\n",
+    "    \"\"\"\n",
+    "    Time: O(N) + O(N x N x M) ~ O(N x N x M)\n",
+    "    Space: O(N)\n",
+    "    \"\"\"\n",
+    "    # Store all the top level nodes\n",
+    "    curr: GFGFlattenLLNode = root\n",
+    "    heads: set[GFGFlattenLLNode] = set()\n",
+    "    while curr:\n",
+    "        next_ = curr.next\n",
+    "        heads.add(curr)\n",
+    "        curr.next = None\n",
+    "        curr = next_\n",
+    "\n",
+    "    # Create a dummy node of ease of ops\n",
+    "    merged = GFGFlattenLLNode(0)\n",
+    "    mh = merged\n",
+    "    while heads:\n",
+    "        min_ = GFGFlattenLLNode(math.inf)\n",
+    "        for curr in heads:\n",
+    "            if curr.data < min_.data:\n",
+    "                min_ = curr\n",
+    "\n",
+    "        heads.remove(min_)\n",
+    "        mh.bottom = min_\n",
+    "        mh, min_ = mh.bottom, min_.bottom\n",
+    "        if min_:\n",
+    "            heads.add(min_)\n",
+    "\n",
+    "    return merged.bottom\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert GFGflattenLL(generateTestCasesForGFGFlattenLL(4, [4,2,3,4], [5,7,8,30,10,20,19,22,50,28,35,40,45])).to_list() == [5,7,8,10,19,20,22,28,30,35,40,45,50]\n",
+    "assert GFGflattenLL(generateTestCasesForGFGFlattenLL(4, [4,1,3,1], [5,7,8,30,10,19,22,50,28])).to_list() == [5,7,8,10,19,22,28,30,50]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0af56f93",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def GFGflattenLLStriver(root) -> GFGFlattenLLNode:\n",
+    "    \"\"\"\n",
+    "    Instead of iterating through all N for every iteration, we can try\n",
+    "    joining two heads at a time for better runtime.\n",
+    "\n",
+    "    Time: O(N) + O(N x 2M) ~ O(NM)\n",
+    "    Space: O(N)\n",
+    "    \"\"\"\n",
+    "    def mergeGFGNodes(head1: GFGFlattenLLNode, head2: GFGFlattenLLNode) -> GFGFlattenLLNode:\n",
+    "        merged: GFGFlattenLLNode = GFGFlattenLLNode(-1)\n",
+    "        mh, curr1, curr2 = merged, head1, head2\n",
+    "        while curr1 or curr2:\n",
+    "            if not curr2 or (curr1 and curr1.data < curr2.data):\n",
+    "                mh.bottom = curr1\n",
+    "                mh, curr1 = mh.bottom, curr1.bottom\n",
+    "            else:\n",
+    "                mh.bottom = curr2\n",
+    "                mh, curr2 = mh.bottom, curr2.bottom\n",
+    "\n",
+    "        return merged.bottom\n",
+    "\n",
+    "    # Store all the top level nodes\n",
+    "    curr: GFGFlattenLLNode = root\n",
+    "    heads: set[GFGFlattenLLNode] = set()\n",
+    "    while curr:\n",
+    "        next_ = curr.next\n",
+    "        heads.add(curr)\n",
+    "        curr.next = None\n",
+    "        curr = next_\n",
+    "\n",
+    "    while len(heads) > 1:\n",
+    "        heads.add(mergeGFGNodes(heads.pop(), heads.pop()))\n",
+    "\n",
+    "    return heads.pop()\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert GFGflattenLLStriver(generateTestCasesForGFGFlattenLL(4, [4,2,3,4], [5,7,8,30,10,20,19,22,50,28,35,40,45])).to_list() == [5,7,8,10,19,20,22,28,30,35,40,45,50]\n",
+    "assert GFGflattenLLStriver(generateTestCasesForGFGFlattenLL(4, [4,1,3,1], [5,7,8,30,10,19,22,50,28])).to_list() == [5,7,8,10,19,22,28,30,50]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "372da5f1",
+   "metadata": {},
+   "source": [
+    "Merge K sorted Lists: https://leetcode.com/problems/merge-k-sorted-lists/\n",
+    "Video Link: https://youtu.be/1zktEppsdig?si=o9ttliAfO99YDin8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c98d074",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/merge-k-sorted-lists/submissions/1272090418\n",
+    "def mergeKLists(lists: list[ListNode]) -> ListNode:\n",
+    "    \"\"\"\n",
+    "    Time: O(2N + 3N .. KN) ~ O(N x K ** 2) ~ O(N ** 3)\n",
+    "    Space: O(1)\n",
+    "    \"\"\"\n",
+    "    def merge(head1: ListNode, head2: ListNode) -> ListNode:\n",
+    "        merged: ListNode = ListNode(-1)\n",
+    "        mh, curr1, curr2 = merged, head1, head2\n",
+    "        while curr1 or curr2:\n",
+    "            if not curr2 or (curr1 and curr1.val < curr2.val):\n",
+    "                mh.next = curr1\n",
+    "                mh, curr1 = mh.next, curr1.next\n",
+    "            else:\n",
+    "                mh.next = curr2\n",
+    "                mh, curr2 = mh.next, curr2.next\n",
+    "        return merged.next\n",
+    "\n",
+    "    while len(lists) > 1:\n",
+    "        lists.append(merge(lists.pop(), lists.pop()))\n",
+    "\n",
+    "    return lists.pop() if lists else None\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert mergeKLists([ListNode.to_singly_linked_list([1,4,5]),ListNode.to_singly_linked_list([1,3,4]),ListNode.to_singly_linked_list([2,6])]).to_list() == [1,1,2,3,4,4,5,6]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3cb0bb18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/merge-k-sorted-lists/submissions/1272122618/\n",
+    "def mergeKListsStriver(lists: list[ListNode]) -> ListNode:\n",
+    "    \"\"\"\n",
+    "    Instead of iterating through pairs of heads, we use a min heap data structure.\n",
+    "    Initially add all heads to heap. Get the min, add to the merged list and add the next_ back to heap.\n",
+    "\n",
+    "    Time: O(N x N x log N) (Total Nodes: N x N)\n",
+    "    Space: O(N)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    heads: list[ListNode] = [node for node in lists]\n",
+    "    heap: list[tuple[int, int]] = [(heads[i].val, i) for i in range(len(heads)) if heads[i]]\n",
+    "    heapq.heapify(heap)\n",
+    "\n",
+    "    merged: ListNode = ListNode(-1)\n",
+    "    mh = merged\n",
+    "    while heap:\n",
+    "        min_idx = heapq.heappop(heap)[1]\n",
+    "        min_ = heads[min_idx]\n",
+    "        mh.next = min_\n",
+    "        mh = mh.next\n",
+    "        if min_.next:\n",
+    "            heapq.heappush(heap, (min_.next.val, min_idx))\n",
+    "            heads[min_idx] = min_.next\n",
+    "\n",
+    "    return merged.next\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert mergeKListsStriver([ListNode.to_singly_linked_list([1,4,5]),ListNode.to_singly_linked_list([1,3,4]),ListNode.to_singly_linked_list([2,6])]).to_list() == [1,1,2,3,4,4,5,6]"
    ]
   }
  ],
